# clawdorio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clawdorio  index.html  package-lock.json  package.json
.dmux-hooks/: before_pane_close  before_pane_create  before_worktree_remove  pane_closed  pane_created  run_dev  worktree_created  worktree_removed
.dmux-hooks/scripts/: hook_proof.sh  worktree_server.sh
.github/workflows/: ghcr.yml
crates/clawdorio/: Cargo.toml  README.md
crates/clawdorio/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml  LIBRARY_ARTIFACTS.md  PR_CREATION_AGENT.md
crates/server/src/: lib.rs  main.rs  tests.rs
deploy/nginx/: clawdorio.local.conf
deploy/systemd-user/: clawdorio.service
docs/: skill-graph-clawhub-adapter.md
scripts/: clawdorio  install-local-nginx-systemd.sh
scripts/visual/: run.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
