[package]
name = "clawdorio-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clawdorio-engine = { path = "../engine" }
clawdorio-protocol = { path = "../protocol" }
html-escape = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
dirs = "6"

[lib]
name = "clawdorio_server"
path = "src/lib.rs"

[[bin]]
name = "clawdorio-server"
path = "src/main.rs"
