[package]
name = "clawdorio-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4", features = ["derive"] }
clawdorio-engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
dirs = "6"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
serde_yaml = "0.9"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }

[lib]
name = "clawdorio_server"
path = "src/lib.rs"

[[bin]]
name = "clawdorio-server"
path = "src/main.rs"
